Refactor: Actualizar la gestión del estado de devolución en DevolucionCompraController y DevolucionCompra para utilizar cadenas en lugar de enteros